<resources>
    <string name="app_name">Food Express</string>
    <string name="resend_message">Resend SMS</string>
    <string name="profileTitle">Profile</string>
    <string name="member_name">Member name</string>
    <string name="contact_phone_no">Phone No</string>
    <string name="please_wait">Please wait</string>
    <string name="save">Save</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_seller">Seller</string>
    <string name="user_customer">Customer</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_order">My Order</string>
    <string name="menu_last_order">Past Order</string>
    <string name="menu_new_order">New Order</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
</resources>